workloads/speedtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-service
  namespace: media
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: speedtest
