workloads/speedtest/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: speedtest-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - speedtest.toothyshouse.com
  rules:
  - host: speedtest.toothyshouse.com
    http:
      paths:
      - path: /
        backend:
          serviceName: speedtest-service
          servicePort: 80
