workloads/speedtest/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: speedtest-network-policy
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: speedtest
  policyTypes:
  - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: media
        podSelector:
          matchLabels:
            app: nginx-ingress
